tariff_data_collection_working

--- a/templates/index_2.html
+++ b/templates/index_2.html
@@ -504,11 +504,8 @@
                     </div>
 
                     <table id="DUOS_tariff_table" class="display nowrap" style="width:100%; height:85%;">
-                        <thead>
-                        <tr class="tariff_table_header" id="DUOS_tariff_table_header"></tr>
-                        </thead>
-                        <tbody id="DUOS_tariff_table_body">
-                        </tbody>
+                        <thead class="tariff_table_header" id="DUOS_tariff_table_header"></thead>
+                        <tbody id="DUOS_tariff_table_body"></tbody>
                     </table>
 
                 </div>
@@ -521,11 +518,8 @@
                     </div>
 
                     <table id="TUOS_tariff_table" class="display nowrap" style="width:100%; height:85%;">
-                        <thead>
-                        <tr class="tariff_table_header" id="TUOS_tariff_table_header"></tr>
-                        </thead>
-                        <tbody id="TUOS_tariff_table_body">
-                        </tbody>
+                        <thead class="tariff_table_header" id="TUOS_tariff_table_header"></thead>
+                        <tbody id="TUOS_tariff_table_body"></tbody>
                     </table>
                 </div>
                 <div id="DUOS_TUOS" class="tabcontent">
@@ -537,11 +531,8 @@
                     </div>
 
                     <table id="DTUOS_tariff_table" class="display nowrap" style="width:100%; height:85%;">
-                        <thead>
-                        <tr class="tariff_table_header" id="DTUOS_tariff_table_header"></tr>
-                        </thead>
-                        <tbody id="DTUOS_tariff_table_body">
-                        </tbody>
+                        <thead class="tariff_table_header" id="DTUOS_tariff_table_header"></thead>
+                        <tbody id="DTUOS_tariff_table_body"></tbody>
                     </table>
                 </div>
                 <div id="NUOS" class="tabcontent" style="width: 100%;">
@@ -552,11 +543,8 @@
                         <input id="NUOS_energy_charge" type="text" value=""  style="width: 10%; float: left;">
                     </div>
                     <table id="NUOS_tariff_table" class="display nowrap" style="width:100%; height:85%;">
-                        <thead>
-                        <tr class="tariff_table_header" id="NUOS_tariff_table_header"></tr>
-                        </thead>
-                        <tbody id="NUOS_tariff_table_body">
-                        </tbody>
+                        <thead class="tariff_table_header" id="NUOS_tariff_table_header"></thead>
+                        <tbody id="NUOS_tariff_table_body"></tbody>
                     </table>
                 </div>
                 <script>document.getElementById("default_tab").click();</script>
