--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,7 @@
     <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
     <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.12/css/jquery.dataTables.min.css">
     <script src="static/contextMenu/contextMenu.js"></script>
+    <script src="static/dataTables.cellEdit.js"></script>
 
   <style>
       /* ---------- Project level settings ---------- */
@@ -77,29 +78,47 @@
         margin: 0;
       }
       #left_column {
-        width:34.5%;
+        width:14.5%;
         float:left;
         height:100%;
         clear: left;
       }
       #logos{
-        height: 10%;
+        height: 20%;
         box-sizing:
         border-box;
         margin: 0
       }
-      /* ---------- Load Selection Panel ---------- */
-      #load_panel{
-        height: 88%;
-        width: 100%;
+
+      .main_tab_content {
+        display: none;
         border-style: groove;
-        border-width: 0.5%;
-        padding: 2%;
+        border-width: 0.25%;
+        height: 100%;
         box-sizing: border-box;
-        position: relative;
-        top: 2%;
+        padding: 1%;
+        width: 100%;
+      }
+
+      .main_tab_links {
+        background-color: inherit;
+        float: left;
+        border-style: solid;
+        border-width: 1px;
+        height: 50px;
+        width: 100%;
         font-size: var(--main-font-size);
       }
+
+      .main_tab_links:hover {
+        background-color: #ddd;
+      }
+
+      .main_tab_links.active {
+        background-color: #ccc;
+      }
+
+      /* ---------- Load Selection Panel ---------- */
       #load_selection {
         height: 10%;
         min-height: 10%;
@@ -115,7 +134,7 @@
         overflow: hidden;
       }
       #load_inspection {
-        height: 37%;
+        height: 30%;
         padding: 2%;
       }
       #load_chart {
@@ -150,42 +169,32 @@
       }
       #right_column {
         float: right;
-        width:65%;
+        width:85%;
         height:100%;
         clear: right;
       }
       /* ---------- Tariff Selection Panel ---------- */
-      #tariff_selection_panel {
-        height:37%;
-        border-style: groove;
-        border-width: 0.5%;
-        padding: 2%;
-        box-sizing: border-box;
-        position: relative;
-        top: 2%;
-        width: 100%
-      }
+
+
       /* --- Put label in border ---*/
-      #tariff_selection_panel h3 {
-        position: absolute;
-        top: 0;
-        font-size: 2hv;
-        line-height: 1;
-        margin: -9px 0 0; /* half of font-size */
-        background: #EEEEEE;
-        padding: 0 3px;
-      }
       .tariff_panel_cols {
         float: left;
       }
+
+      # upper_tariff_section {
+        width: 100%
+        height: 40%
+      }
+
       #left_tariff_col {
-        width: 13%;
-        height: 100%;
+        width: 50%;
+        height: 80%;
       }
       #middle_tariff_col {
-        width: 20%;
-        height: 100%;
+        width: 50%;
+        height: 80%;
       }
+
       .tariff_filter {
         height: var(--main-selector-height);
         font-size: var(--main-font-size);
@@ -201,9 +210,9 @@
       .inter_selector_padder{
         height: 2vh;
       }
-      #right_tariff_col {
-        width: 67%;
-        height: 100%;
+      #lower_tariff_section {
+        width: 100%;
+        height: 65%;
       }
       #tariff_panel_header {
         height: 10%;
@@ -218,6 +227,7 @@
         background-color: #f1f1f1;
         height: 10%;
       }
+
       .tab button {
         background-color: inherit;
         float: left;
@@ -226,12 +236,15 @@
         height: 100%;
         font-size: var(--main-font-size);
       }
+
       .tab button:hover {
         background-color: #ddd;
       }
+
       .tab button.active {
         background-color: #ccc;
       }
+
       .tabcontent {
         display: none;
         border-style: groove;
@@ -241,6 +254,7 @@
         padding: 1%;
         width: 100%;
       }
+
       .charges_header {
         width: 100%;
         height: 15%;
@@ -251,14 +265,6 @@
         width: 100%;
         height: 85%;
         margin: 0 auto;
-      }
-
-      #results_panel {
-        height:61%;
-        border-style: groove;
-        border-width: 0.5%;
-        padding: 0.5%;
-        box-sizing: border-box;
       }
 
       #result_chart  {
@@ -279,14 +285,7 @@
         background: #ADDFFF;
         border-color: #5D8FAF;
       }
-      #load_panel h3 {
-        position: absolute;
-        top: 0; font-size: 18px;
-        line-height: 1;
-        margin: -9px 0 0; /* half of font-size */
-        background: #EEEEEE;
-        padding: 0 3px;
-      }
+
       .standard_label {
         height: 4.25vh;
         font-size: var(--main-font-size);
@@ -321,12 +320,21 @@
   <div class="main">
 
     <div id="left_column">
+        <script src="static/main_tabs.js"></script>
         <div id="logos">
-            <img src="static/CEEMLogo.png" alt="UNSW Logo", style="float:left; max-width: 60%; max-height:100%">
-            <img src="static/UNSWLogo.png" alt="UNSW Logo", style="max-width: 30%; max-height:100%">
+            <img src="static/UNSWLogo.png" alt="UNSW Logo", style="width: 100%;">
+            <img src="static/CEEMLogo.png" alt="UNSW Logo", style="float:left; width: 100%;">
         </div>
-        <div id="load_panel">
-            <h3 style="font-size: var(--main-font-size)">Select Load:</h3>
+        <button id="default_panel" class="main_tab_links" onclick="displayPanels(event, 'load_panel')">Load</button>
+        <button class="main_tab_links" onclick="displayPanels(event, 'tariff_selection_panel')">Tariffs</button>
+        <button class="main_tab_links" onclick="displayPanels(event, 'results_panel')">Results</button>
+
+    </div>
+
+    <div id="right_column" class="main_tab">
+
+        <div id="load_panel" class="main_tab_content">
+
             <div id="load_selecion">
                 <span style="font-size: 2vh">Selected:</span>
                 <select id="select" name="select" style="font-size: var(--main-font-size)"><option selected="selected">blank</option></select>
@@ -336,7 +344,6 @@
             </div>
             <hr>
             <div id="demograhphic_selection">
-
                 <div id="demo_label_col" style="height: 100%; width: 80%; float: left;">
                     <div id="demo_label_0" class="demo_label"></div>
                     <div class="demo_select_padder"></div>
@@ -435,49 +442,48 @@
             </div>
         </div>
 
-    </div>
 
-    <div id="right_column">
-
-        <div id="results_panel">
+        <div id="results_panel" class="main_tab_content">
             <!-- Chart goes here in this div -->
             <div id="result_chart">
             </div>
         </div>
 
-        <div id="tariff_selection_panel">
-            <h3 style="font-size: var(--main-font-size)">Select Tariff:</h3>
-            <div id="left_tariff_col"  class="tariff_panel_cols">
-                <span class="standard_label">Type:</span>
-                <span class="standard_label">State:</span>
-                <span class="standard_label">Provider:</span>
-                <span class="standard_label">Year:</span>
-                <span class="standard_label">Tariff:</span>
-            </div>
-            <div id="middle_tariff_col" class="tariff_panel_cols">
-                <select class="tariff_filter" id="select_tariff_type" >
-                    <option selected="selected">Select1</option>
-                </select>
-                <div class="inter_selector_padder"></div>
-                <select class="tariff_filter" id="select_tariff_state" >
-                    <option selected="selected">Select1</option>
-                </select>
-                <div class="inter_selector_padder"></div>
-                <select class="tariff_filter" id="select_tariff_provider" >
-                    <option selected="selected">Select1</option>
-                </select>
-                <div class="inter_selector_padder"></div>
-                <select class="tariff_filter" id="select_tariff_year" >
-                    <option selected="selected">Select1</option>
-                </select>
-                <div class="inter_selector_padder"></div>
-                <select class="tariff_selector" id="select_tariff" >
-                    <option selected="selected">Select1</option>
-                </select>
+        <div id="tariff_selection_panel" class="main_tab_content">
+            <div id="upper_tariff_section">
+                <div id="left_tariff_col"  class="tariff_panel_cols">
+                    <span class="standard_label">Type:</span>
+                    <span class="standard_label">State:</span>
+                    <span class="standard_label">Provider:</span>
+                    <span class="standard_label">Year:</span>
+                    <span class="standard_label">Tariff:</span>
+                </div>
+                <div id="middle_tariff_col" class="tariff_panel_cols">
+                    <select class="tariff_filter" id="select_tariff_type" >
+                        <option selected="selected">Select1</option>
+                    </select>
+                    <div class="inter_selector_padder"></div>
+                    <select class="tariff_filter" id="select_tariff_state" >
+                        <option selected="selected">Select1</option>
+                    </select>
+                    <div class="inter_selector_padder"></div>
+                    <select class="tariff_filter" id="select_tariff_provider" >
+                        <option selected="selected">Select1</option>
+                    </select>
+                    <div class="inter_selector_padder"></div>
+                    <select class="tariff_filter" id="select_tariff_year" >
+                        <option selected="selected">Select1</option>
+                    </select>
+                    <div class="inter_selector_padder"></div>
+                    <select class="tariff_selector" id="select_tariff" >
+                        <option selected="selected">Select1</option>
+                    </select>
+                </div>
             </div>
             <script src="static/build_tariff_selectors.js"></script>
             <script src="static/build_tariff_table.js"></script>
-            <div id="right_tariff_col" class="tariff_panel_cols">
+            <script src="static/save_tariff.js"></script>
+            <div id="lower_tariff_section" class="tariff_panel_cols">
                 <script src="static/tariff_tabs.js"></script>
                 <div id="tariff_panel_header">
                     <div id="name_label", style="width: 25%; float: left;">Name: N/A</div>
@@ -488,31 +494,49 @@
                 <div id="tariff_tabs" class="tab">
                     <button id="default_tab" class="tablinks" onclick="displayTariff(event, 'DUOS')">DUOS</button>
                     <button class="tablinks" onclick="displayTariff(event, 'TUOS')">TUOS</button>
-                    <button class="tablinks" onclick="displayTariff(event, 'DUOS_TUOS')">DUOS+TUOS</button>
+                    <button class="tablinks" onclick="displayTariff(event, 'DTUOS')">DUOS+TUOS</button>
                     <button class="tablinks" onclick="displayTariff(event, 'NUOS')">NUOS</button>
                 </div>
-                <div id="DUOS" class="tabcontent" style="width: 100%;">
+                <div id="DUOS" class="tabcontent" style="width: 100%; ">
                     <div id="DUOS_header" class="charges_header">
                         <div style="float: left;">Daily Charge ($/day):</div>
                         <input id="DUOS_daily_charge" type="text" value="" style="width: 10%; float: left;">
                         <div style="float: left; padding-left: 5%">Energy Charge ($/kWh):</div>
                         <input id="DUOS_energy_charge" type="text" value=""  style="width: 10%; float: left;">
                     </div>
-
-                    <table id="DUOS_tariff_table" class="display nowrap" style="width:100%; height:85%;">
-                        <thead>
-                        <tr class="tariff_table_header" id="DUOS_tariff_table_header"></tr>
-                        </thead>
-                        <tbody id="DUOS_tariff_table_body">
-                        </tbody>
+                    <div style="overflow-x: scroll;">
+                        <table id="DUOS_tariff_table" class="display nowrap" style="width:100%; height:85%;">
+                            <thead class="tariff_table_header" id="DUOS_tariff_table_header"></thead>
+                            <tbody id="DUOS_tariff_table_body"></tbody>
                     </table>
+                    </div>
 
                 </div>
                 <div id="TUOS" class="tabcontent">
-                    TUOS
+                    <div id="TUOS_header" class="charges_header">
+                        <div style="float: left;">Daily Charge ($/day):</div>
+                        <input id="TUOS_daily_charge" type="text" value="" style="width: 10%; float: left;">
+                        <div style="float: left; padding-left: 5%">Energy Charge ($/kWh):</div>
+                        <input id="TUOS_energy_charge" type="text" value=""  style="width: 10%; float: left;">
+                    </div>
+
+                    <table id="TUOS_tariff_table" class="display nowrap" style="width:100%; height:85%;">
+                        <thead class="tariff_table_header" id="TUOS_tariff_table_header"></thead>
+                        <tbody id="TUOS_tariff_table_body"></tbody>
+                    </table>
                 </div>
-                <div id="DUOS_TUOS" class="tabcontent">
-                    DUOS+TUOS
+                <div id="DTUOS" class="tabcontent">
+                    <div id="DTUOS_header" class="charges_header">
+                        <div style="float: left;">Daily Charge ($/day):</div>
+                        <input id="DTUOS_daily_charge" type="text" value="" style="width: 10%; float: left;">
+                        <div style="float: left; padding-left: 5%">Energy Charge ($/kWh):</div>
+                        <input id="DTUOS_energy_charge" type="text" value=""  style="width: 10%; float: left;">
+                    </div>
+
+                    <table id="DTUOS_tariff_table" class="display nowrap" style="width:100%; height:85%;">
+                        <thead class="tariff_table_header" id="DTUOS_tariff_table_header"></thead>
+                        <tbody id="DTUOS_tariff_table_body"></tbody>
+                    </table>
                 </div>
                 <div id="NUOS" class="tabcontent" style="width: 100%;">
                     <div id="NUOS_header" class="charges_header">
@@ -522,11 +546,8 @@
                         <input id="NUOS_energy_charge" type="text" value=""  style="width: 10%; float: left;">
                     </div>
                     <table id="NUOS_tariff_table" class="display nowrap" style="width:100%; height:85%;">
-                        <thead>
-                        <tr class="tariff_table_header" id="NUOS_tariff_table_header"></tr>
-                        </thead>
-                        <tbody id="NUOS_tariff_table_body">
-                        </tbody>
+                        <thead class="tariff_table_header" id="NUOS_tariff_table_header"></thead>
+                        <tbody id="NUOS_tariff_table_body"></tbody>
                     </table>
                 </div>
                 <script>document.getElementById("default_tab").click();</script>
