--- a/templates/index.html
+++ b/templates/index.html
@@ -81,12 +81,12 @@
       }
 
       .row {
-        display: flex;
+        width: 100%;
       }
 
       .col {
-        display: flex;
-        flex-direction: column;
+        height: 100%;
+        float: left;
       }
 
       #container {
@@ -109,7 +109,6 @@
         width:100%; padding: 0.5%;
         box-sizing: border-box;
         margin: 0;
-        display: flex;
       }
 
       #logos{
@@ -229,6 +228,8 @@
         display: none;
       }
 
+      .datatable-row-detail { width: 50vw; }
+
   </style>
 
   <div id="popupMenu2">
@@ -252,7 +253,7 @@
     <hr class="header_border"/>
   <div class="main">
 
-    <div id="left_column" class="tab_button_area" style="flex: 14.5%">
+    <div id="left_column" class="tab_button_area" style="height: 100%; width: 14.5%; float: left;">
         <script src="static/main_tabs.js"></script>
         <div id="logos">
             <img src="static/UNSWLogo.png" alt="UNSW Logo" style="width: 100%;">
@@ -264,7 +265,7 @@
 
     </div>
 
-    <div id="right_column" class="main_tab" style="flex: 85%">
+    <div id="right_column" class="main_tab" style="height: 100%; width: 85%; float: left;">
 
         <div id="load_panel" class="main_tab_content">
 
@@ -280,7 +281,7 @@
             </div>
             <hr>
             <div id="demograhphic_selection" class="row">
-                <div id="demo_label_col" class="col" style="flex: 80%;">
+                <div id="demo_label_col" class="col" style="width: 80%;">
                     <div id="demo_label_0" class="label"></div>
                     <div id="demo_label_1"  class="label"></div>
                     <div id="demo_label_2" class="label"></div>
@@ -292,7 +293,7 @@
                     <div id="demo_label_8"  class="label"></div>
                     <div id="demo_label_9"  class="label"></div>
                 </div>
-                <div id="demo_selector_col" class="col" style="flex: 20%;">
+                <div id="demo_selector_col" class="col" style="width: 20%;">
                     <div id="demo_0" class="demo_select_container">
                         <select  id="demo_select_0"></select>
                     </div>
@@ -369,14 +370,14 @@
 
         <div id="tariff_selection_panel" class="main_tab_content">
             <div id="upper_tariff_section" class="row" style="height: 40%;">
-                <div id="left_tariff_col"  class="col" style="flex: 50%">
+                <div id="left_tariff_col"  class="col" style="width: 15%">
                     <span class="label">Type:</span>
                     <span class="label">State:</span>
                     <span class="label">Provider:</span>
                     <span class="label">Year:</span>
                     <span class="label">Tariff:</span>
                 </div>
-                <div id="middle_tariff_col" class="col" style="flex: 50%">
+                <div id="middle_tariff_col" class="col" style="width: 30%">
                     <select id="select_tariff_type">
                         <option selected="selected">Select1</option>
                     </select>
@@ -397,16 +398,16 @@
             <script src="static/build_tariff_selectors.js"></script>
             <script src="static/build_tariff_table.js"></script>
             <script src="static/save_tariff.js"></script>
-            <div id="lower_tariff_section" class="row" style="flex-direction: column; height: 60%;">
+            <div id="lower_tariff_section" class="row" style="height: 60%;">
                 <script src="static/tariff_tabs.js"></script>
-                <div id="tariff_panel_header" class="row" style="height: 10%">
-                    <div id="name_label", style="flex: 5%;">Name:</div>
-                    <div id="name_value", style="flex: 20%;">N/A</div>
-                    <div id="type_label", style="flex: 5%;">Type:</div>
-                    <div id="type_value", style="flex: 20%;">N/A</div>
-                    <div id="state_label", style="flex: 5%;">State:</div>
-                    <div id="state_value", style="flex: 20%;">N/A</div>
-                    <div style="flex: 25%;"><button>Add</button></div>
+                <div id="tariff_panel_header" class="row" style="height: 10%;">
+                    <div id="name_label" class="col" style="width: 5%;">Name:</div>
+                    <div id="name_value" class="col" style="width: 20%;">N/A</div>
+                    <div id="type_label" class="col" style="width: 5%;">Type:</div>
+                    <div id="type_value" class="col" style="width: 20%;">N/A</div>
+                    <div id="state_label" class="col" style="width: 5%;">State:</div>
+                    <div id="state_value" class="col" style="width: 20%;">N/A</div>
+                    <div style="width: 20%;" class="col"><button>Add</button></div>
                 </div>
                 <div id="tariff_tabs" class="tab_button_area">
                     <button id="default_tab" class="tablinks" onclick="displayTariff(event, 'DUOS')">DUOS</button>
@@ -414,15 +415,15 @@
                     <button class="tablinks" onclick="displayTariff(event, 'DTUOS')">DUOS+TUOS</button>
                     <button class="tablinks" onclick="displayTariff(event, 'NUOS')">NUOS</button>
                 </div>
-                <div id="DUOS" class="tabcontent" style="width: 100%; ">
+                <div id="DUOS" class="tabcontent" style="width: 100%;">
                     <div id="DUOS_header" class="row" style="height: 20%">
                         <div style="float: left;">Daily Charge ($/day):</div>
                         <input id="DUOS_daily_charge" type="text" value="" style="width: 10%; float: left;" onclick="display_save_mod_tariff_option(event)">
                         <div style="float: left; padding-left: 5%">Energy Charge ($/kWh):</div>
                         <input id="DUOS_energy_charge" type="text" value=""  style="width: 10%; float: left;" onclick="display_save_mod_tariff_option(event)">
                     </div>
-                    <div style="width: 100%; height:85%;">
-                        <table id="DUOS_tariff_table" class="display nowrap" width="100%">
+                    <div style="overflow-x: scroll;" >
+                        <table id="DUOS_tariff_table" class="display nowrap" style="width: 100%; height:85%;">
                             <thead class="tariff_table_header" id="DUOS_tariff_table_header"></thead>
                             <tbody id="DUOS_tariff_table_body"></tbody>
                     </table>
