--- a/templates/index.html
+++ b/templates/index.html
@@ -10,12 +10,18 @@
 
   <!-- This is the 'importing' of external libraries. -->
     <link href="static/contextMenu/contextMenu.css"  rel="stylesheet" type="text/css" />
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="crossorigin="anonymous"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.7.0/moment.min.js" type="text/javascript"></script>
-    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js"></script>
-    <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.12/css/jquery.dataTables.min.css">
+    <!-- <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="crossorigin="anonymous"></script>-->
+    <script src="static/jquery-3.3.1.min.js"></script>
+    <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.7.0/moment.min.js" type="text/javascript"></script> -->
+    <script src="static/moment.min.js" type="text/javascript"></script>
+    <!--<script src="https://cdn.plot.ly/plotly-latest.min.js"></script> -->
+    <script src="static/plotly-latest.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js"></script> -->
+    <script src="static/d3.min.js"></script>
+    <!--<script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script> -->
+    <script src="static/jquery.dataTables.min.js"></script>
+    <!-- <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.12/css/jquery.dataTables.min.css"> -->
+    <link rel="stylesheet" type="text/css" href="static/jquery.dataTables.min.css">
     <script src="static/contextMenu/contextMenu.js"></script>
     <script src="static/dataTables.cellEdit.js"></script>
     <script src="static/results_tabs.js"></script>
